--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "belajar restful api udemy",
   "main": "src/main.js",
   "scripts": {
-    "test": "jest -i"
+    "test": "jest -i --verbose"
   },
   "jest": {
     "transform": {
